2012-11-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_element_is_type),
	(gst_ttmlparse_attribute_parse), (gst_ttmlparse_attribute_free),
	(gst_ttmlparse_state_set_attribute),
	(gst_ttmlparse_state_get_attribute),
	(gst_ttmlparse_state_push_attribute),
	(gst_ttmlparse_state_push_attribute_group_marker),
	(gst_ttmlparse_state_pop_attribute), (gst_ttmlparse_send_buffer),
	(gst_ttmlparse_sax_element_start), (gst_ttmlparse_sax_element_end),
	(gst_ttmlparse_chain), (gst_ttmlparse_state_reset),
	(gst_ttmlparse_dispose), (gst_ttmlparse_init):
	* src/gstttmlprivate.h:
	  - Implement an attribute stack, so attributes can be inherited. No change
	    in functionality, everything is just done in a different way.

2012-11-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmltype.c: (gst_ttmltype_init):
	  - Added new supported extension: dfxp

2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_chain), (gst_ttmlparse_init):
	  - Use the first buffer of an XML as the base time, not the last.

2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_send_buffer):
	  - Default newsegments start at the first timestamp, not at 0.

2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_get_property),
	(gst_ttmlparse_set_property), (gst_ttmlparse_class_init):
	* src/gstttmlprivate.h:
	  - Add property skeleton for "Assume Ordered Spans". Not implemented yet.

2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_dispose),
	(gst_ttmlparse_init):
	* src/gstttmlprivate.h:
	  - Comment out timeline functions to make code compile while we work on
	    something else.
	  - Timeline initialization and disposal.

2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlprivate.h:
	  - Typo in comment

2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: